<resources>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="menu">menu</string>
    <string name="mark">mark</string>
    <string name="search">search</string>
    <string name="pro2">pro2</string>
    <string name="img2">img2</string>
    <string name="img3">img3</string>
    <string name="img4">img4</string>
    <string name="img5">img5</string>
    <string name="ad">ad</string>
    <string name="img8">img8</string>
    <string name="img6">img6</string>
    <string name="img7">img7</string>
    <string name="img9">img9</string>
    <string name="ad2">ad2</string>
    <string name="img10">img10</string>
    <string name="img11">img11</string>
    <string name="img12">img12</string>
    <string name="img13">img13</string>
    <string name="magic">magic</string>
    <string name="star">star</string>
    <string name="fire">fire</string>
    <string name="profile2">profile2</string>
    <string name="feed">Feed</string>
    <string name="top">TOP</string>
    <string name="trending">TRENDING</string>
    <string name="recent">RECENT</string>
    <string name="love">#love</string>
    <string name="beautiful">#beautiful</string>
    <string name="birthday">#birthday</string>
    <string name="cartoon">#cartoon</string>
    <string name="background">#background</string>
    <string name="sketch">#sketch</string>
    <string name="happy">#happybirthday</string>
    <string name="effect">#cartooneffect</string>
    <string name="selfie">#selfie</string>
    <string name="black">#blackandwhite</string>
    <string name="dot">....</string>
    <string name="photolab">photo</string>
    <string name="photo">photolab</string>
    <string name="user">user</string>
    <string name="usrename">Usrename:</string>
    <string name="password">password</string>
    <string name="enter_the_password">enter the password</string>
    <string name="enter_the_name">enter the name</string>
    <string name="pass">Password:</string>
    <string name="press">Press</string>
    <string name="logo">logo</string>
    <string name="app_name">app_name</string>
    <string name="ad3">ad3</string>
    <string name="img16">img16</string>
    <string name="img15">img15</string>
    <string name="ad4">ad4</string>
</resources>